Fix for issue #363: infer vars within call inside closure inside call